<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="24dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_sentiment_satisfied_black_24dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="60sp"
            android:background="@null"
            android:focusable="false"
            android:clickable="false"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/colorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_blue_18dp"
                android:drawableLeft="@drawable/ic_person_blue_18dp"
                android:drawablePadding="4dp"
                android:hint="Username"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack"
                android:textColorHint="#666"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/colorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_remove_red_eye_white_18dp"
                android:drawableLeft="@drawable/ic_remove_red_eye_white_18dp"
                android:drawablePadding="4dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="#666"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/colorHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_veri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_remove_red_eye_white_18dp"
                android:drawableLeft="@drawable/ic_remove_red_eye_white_18dp"
                android:drawablePadding="4dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="#666"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/holo_blue_dark"
            android:text="Login"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:padding="4dp"
                android:text="New user? SIGN UP"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>