...
                        android:textColor="@color/colorBlack"
                        android:textColorHint="#666"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
...
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/blue_bg"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:padding="4dp"
            android:text="Already have an account? Log in"
...
