...
            android:title="@string/sb_map"
            app:itemTextColor = "@color/drwer_font"/>
    </group>

    <group android:id="@+id/group2" >
        <!-- TODO find an appropriate icon -->
        <item android:id="@+id/nav_item_log_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sb_log_out"
            app:itemTextColor = "@color/drwer_font"
            app:itemIconTint="@color/drwer_font"/>
    </group>

...
